#==============================================================================
# 
#        OpenSees -- Open System For Earthquake Engineering Simulation
#                Pacific Earthquake Engineering Research Center
# 
#==============================================================================

add_subdirectory(component)
add_subdirectory(domain)
add_subdirectory(load)
add_subdirectory(node)
add_subdirectory(subdomain)
add_subdirectory(constraints)
add_subdirectory(pattern)
add_subdirectory(groundMotion)
add_subdirectory(region)
add_subdirectory(partitioner)

