#==============================================================================
# 
#        OpenSees -- Open System For Earthquake Engineering Simulation
#                Pacific Earthquake Engineering Research Center
#
#==============================================================================
add_library(graph OBJECT)

add_subdirectory(graph)
add_subdirectory(numberer)
add_subdirectory(partitioner)
